--- a/config.ini
+++ b/config.ini
@@ -15,5 +15,5 @@ default_log_path = logs
 default_log_time_format = %%Y-%%m-%%d-%%H-%%M-%%S
 
 [Memory]
-default_row_set = 1000
-default_insert_files = 15
+default_row_set = 1000000
+default_insert_files = 10
