--- a/config.ini
+++ b/config.ini
@@ -8,6 +8,10 @@ default_postgres_creates = data/PostgreSQL/Creates/
 default_postgres_inserts = data/PostgreSQL/Inserts/
 default_postgres_updates = data/PostgreSQL/Updates/
 default_postgres_drops = data/PostgreSQL/Drops/
+default_mongo_creates = data/MongoDB/Creates/
+default_mongo_inserts = data/MongoDB/Inserts/
+default_mongo_updates = data/MongoDB/Updates/
+default_mongo_drops = data/MongoDB/Drops/
 
 [Logs]
 default_log_name = LOG
