DataGenerator updated as well as config.ini

--- a/config.ini
+++ b/config.ini
@@ -19,5 +19,5 @@ default_log_path = logs
 default_log_time_format = %%Y-%%m-%%d-%%H-%%M-%%S
 
 [Memory]
-default_row_set = 10
-default_insert_files = 1
+default_insert_set = 10000
+default_insert_files = 10
