--- a/config.ini
+++ b/config.ini
@@ -19,5 +19,6 @@ default_log_path = logs
 default_log_time_format = %%Y-%%m-%%d-%%H-%%M-%%S
 
 [Memory]
-default_row_set = 10
+default_row_set = 100000
+default_document_set = 100000
 default_insert_files = 1
