--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,7 @@
 default_database_name = hospital
 default_mongo_connection_string = mongodb://admin:secret@localhost:27017/
 default_postgres_connection_string = postgresql://admin:secret@localhost:32768/
+default_database_autoconnect = True
 
 [Data]
 default_postgres_creates = data/PostgreSQL/Creates/
@@ -19,5 +20,6 @@ default_log_path = logs
 default_log_time_format = %%Y-%%m-%%d-%%H-%%M-%%S
 
 [Memory]
-default_insert_set = 100000
-default_insert_files = 10
+default_insert_set = 625000
+default_insert_files = 40
+
