Se agrega menu Index, su lógica y el archivo Indexs.zip

--- a/config.ini
+++ b/config.ini
@@ -9,10 +9,12 @@ default_postgres_creates = data/PostgreSQL/Creates/
 default_postgres_inserts = data/PostgreSQL/Inserts/
 default_postgres_updates = data/PostgreSQL/Updates/
 default_postgres_drops = data/PostgreSQL/Drops/
+default_postgres_indexs = data/PostgreSQL/Indexs/
 default_mongo_creates = data/MongoDB/Creates/
 default_mongo_inserts = data/MongoDB/Inserts/
 default_mongo_updates = data/MongoDB/Updates/
 default_mongo_drops = data/MongoDB/Drops/
+
 
 [Logs]
 default_log_name = LOG
@@ -22,4 +24,3 @@ default_log_time_format = %%Y-%%m-%%d-%%H-%%M-%%S
 [Memory]
 default_insert_set = 625000
 default_insert_files = 40
-
