Indexs -> Indexes y se agregó carpeta Queries con los inner joins para PostgreSQL

--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@ default_postgres_creates = data/PostgreSQL/Creates/
 default_postgres_inserts = data/PostgreSQL/Inserts/
 default_postgres_updates = data/PostgreSQL/Updates/
 default_postgres_drops = data/PostgreSQL/Drops/
-default_postgres_indexs = data/PostgreSQL/Indexs/
+default_postgres_indexes = data/PostgreSQL/Indexes/
 default_mongo_creates = data/MongoDB/Creates/
 default_mongo_inserts = data/MongoDB/Inserts/
 default_mongo_updates = data/MongoDB/Updates/
