Se agregan Indexes en Mongo (zip, logic, Submenu)

--- a/config.ini
+++ b/config.ini
@@ -14,7 +14,7 @@ default_mongo_creates = data/MongoDB/Creates/
 default_mongo_inserts = data/MongoDB/Inserts/
 default_mongo_updates = data/MongoDB/Updates/
 default_mongo_drops = data/MongoDB/Drops/
-
+default_mongo_indexes = data/MongoDB/Indexes/
 
 [Logs]
 default_log_name = LOG
