Updating data and config.ini

--- a/config.ini
+++ b/config.ini
@@ -10,11 +10,13 @@ default_postgres_inserts = data/PostgreSQL/Inserts/
 default_postgres_updates = data/PostgreSQL/Updates/
 default_postgres_drops = data/PostgreSQL/Drops/
 default_postgres_indexes = data/PostgreSQL/Indexes/
+default_postgres_queries = data/PostgreSQL/Queries/
 default_mongo_creates = data/MongoDB/Creates/
 default_mongo_inserts = data/MongoDB/Inserts/
 default_mongo_updates = data/MongoDB/Updates/
 default_mongo_drops = data/MongoDB/Drops/
 default_mongo_indexes = data/MongoDB/Indexes/
+default_mongo_queries = data/MongoDB/Queries/
 
 [Logs]
 default_log_name = LOG
@@ -23,5 +25,5 @@ default_log_time_format = %%Y-%%m-%%d-%%H-%%M-%%S
 
 [Memory]
 default_insert_set = 625000
-default_insert_files = 40
+default_insert_files = 80
 
